--- a/app.json
+++ b/app.json
@@ -1,4 +1,8 @@
 [
-{"Notificacion": "kafsdf"},
-{"afasdfa": "afadsfdshfk"}
+  {
+    "Notificacion": "kafsdf"
+  },
+  {
+    "afasdfa": "afadsfdshfk"
+  }
 ]
